# Protein_Binding_Site_Prediction

./: README.md  pyproject.toml  requirements.txt
class_files/: ESM.py  Model_and_Pymol.py  PDBparser.py
data/: README.md
data/processed/: dataset-processing.ipynb
model/: deep-learning-model-build.ipynb  model.pth
predicting_binding_sites.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
script/: main.py
test/: README.md
test/test1/: 1HSG_binding.pml
test/test2/: 4HHB_binding.pml
test/test3/: 1ATP_binding.pml
